<resources>
    <string name="app_name">Marketix</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="shopping">Shopping</string>
    <string name="total_cost">Total Cost</string>
    <string name="checkout">Checkout</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="addressType">address</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment">Payment</string>
    <string name="looking_for_products">Looking for products</string>
    <string name="filters">Filters</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="kids">Kids</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="sale">Sale</string>
    <string name="home">Home</string>
    <string name="apply">Apply</string>
    <string name="hello_again">Hello Again</string>
    <string name="welcome_back_msg">Welcome Back You\'ve been missed</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sing_in_with_google">Sign in With Google</string>
    <string name="forget_password">Forget Password</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="your_email_here">Your email Here</string>
    <string name="password_here">Password Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="your_name">Your Name</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="already_have_an_account">Already Have An Account? </string>
    <string name="create_account_msg">Let\'s Create New Account</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="password_recovery_msg">Please Enter Your Email address to receive a Verification Code</string>
    <string name="verify">Continue</string>
    <string name="account_amp_settings"><![CDATA[Account & Settings]]></string>
    <string name="account">Account</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_info">Payment Info</string>
    <string name="app_settings">App Settings</string>
    <string name="eneble_push_notifications">Eneble Push Notifications</string>
    <string name="eneble_location_services">Eneble Location Services</string>
    <string name="currency_info">currency info</string>
    <string name="go">go</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name">your full name</string>
    <string name="confirm">confirm</string>
    <string name="logout">logout</string>
    <string name="save_address">Save Address</string>
    <string name="country">country</string>
    <string name="cities">Cities</string>
    <string name="please_choose_your_currency">please choose your currency</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="how_was_your_experience">How was Your Experience</string>
    <string name="submit_review">Submit Review</string>
    <string name="size">Size</string>
    <string name="describe_your_experience">Describe Your Experience</string>
    <string name="your_rating">Your Rating</string>
    <string name="orders">Orders</string>
    <string name="created_at">Created at:</string>
    <string name="order_price">Price:</string>
    <string name="discount_code">discount code : </string>
    <string name="do_you_have_any_discount_code">do you have any discount code ?</string>
    <string name="dismiss">dismiss</string>
    <string name="successfull_message">data saved successfully</string>
    <string name="failed_message">something went wrong</string>
    <string name="currency">currency</string>
    <string name="notification">notification</string>
    <string name="location">location</string>
    <string name="locationservice">LocationService</string>
    <string name="favorites">Favorites</string>
    <string name="cartFragmentDeepLink">shopify://cartFragment</string>
    <string name="homeFragmentDeepLink">shopify://homeFragment</string>
    <string name="cityType">city</string>
    <string name="addresses">Addresses</string>
    <string name="new_password">new password</string>
    <string name="users">users\n</string>
    <string name="username_invalid">Starts with an alphabetic character
Contains only alphanumeric characters and underscores and
Is between 8 and 30 characters long</string>
    <string name="password_invalid">password must have Capital letter, small letter , special character and at least 8 chars</string>
    <string name="phone_invalid">this phone number is invalid</string>
    <string name="userName_isUpdated">your user name updated successfully</string>
    <string name="userImage_isUpdated">your image updated successfully</string>
    <string name="userPassword_isUpdated">your  password updated successfully</string>
    <string name="userPhone_isUpdated">your phone number updated successfully</string>
    <string name="account_updated_successfully"> your account is updated successfully</string>
    <string name="location_database">locationDatabase\n</string>
    <string name="city_colon">City : </string>
    <string name="address_colon">Address : </string>
    <string name="latitudeType">latitude</string>
    <string name="longitude">longitude</string>
    <string name="inserted_successfully">address inserted successfully</string>
    <string name="updated_successfully">address updated successfully</string>
    <string name="please_choose_your_address_location">please choose your address location</string>
    <string name="please_insert_all_required_fields">please insert all required fields</string>
    <string name="newaddressType">newAddress</string>
    <string name="error_invalid_email">Invalid Email, Check it again</string>
    <string name="error_invalid_password">Invalid Password Format!</string>
    <string name="error_empty_fields">Fields can\'t be empty</string>
    <string name="kids_category">451868557591</string>
    <string name="men_category">451868492055</string>
    <string name="women_category">451868524823</string>
    <string name="sale_category">451868590359</string>
    <string name="product_types">Product Types</string>
    <string name="t_shirts_tag">T-SHIRTS</string>
    <string name="t_shirts">T-shirts</string>
    <string name="accessories_tag">ACCESSORIES</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">Shoes</string>
    <string name="shoes_tag">SHOES</string>
    <string name="map">map</string>
    <string name="gps">GPS</string>
    <string name="please_choose_location_type">please choose location type</string>
    <string name="type">type</string>
    <string name="please_enable_your_location">please enable your location</string>
    <string name="no_favorites">No Favorites Yet</string>
    <string name="please_we_need_location_permission">please enable location permission</string>
    <string name="item_deleted_successfully">item deleted successfully</string>
    <string name="the_max_mount_item">currently this is the max mount of this item</string>
    <string name="address_hint">Octorber, Cairo 12/8AB</string>
    <string name="free_discount_code">"free discount code : "</string>
    <string name="notificationBuilder">builder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="to_cart">Add To Cart</string>
    <string name="to_favorites">Add To Favorites</string>
    <string name="added_to_favorites">Item Added To Favorites</string>
    <string name="added_to_cart">Item Added To Cart</string>
    <string name="codes">discount codes\n</string>
    <string name="done">done</string>
    <string name="choose_your_address_please">choose your address please</string>
    <string name="please_choose_address">please choose your address</string>
    <string name="please_write_your_email">please write your email address</string>
    <string name="guest">Continue As a Guest</string>
</resources>