<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".checkout.presentation.emaildialog.EmailDialogFragment">


    <TextView
        android:id="@+id/pageTitleTextView"
        style="@style/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/do_you_have_any_discount_code"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_blue"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAppearance="@style/p3"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dismissButton"
        app:layout_constraintTop_toBottomOf="@+id/discountInputLayout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dismissButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_red"
        android:gravity="center"
        android:text="@string/dismiss"
        android:textAppearance="@style/p3"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/discountInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="30dp"
        android:background="@drawable/stroke_input_layout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/text_grayed"
        app:layout_constraintEnd_toEndOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="@+id/dismissButton"
        app:layout_constraintTop_toBottomOf="@+id/pageTitleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/discount_code"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textAppearance="@style/p3"
            android:textColor="@color/text_grayed"
            android:textColorHint="@color/text_grayed" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>