<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/chooseYourCurrency"
            style="@style/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/please_choose_your_currency"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/countryTitleTextView"
        style="@style/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/country"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseYourCurrency" />


        <Spinner
            android:id="@+id/countriesSpinner"
            style="@style/SpinnerTheme"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/countryTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/countryTitleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmButton"
        style="@style/p3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:elevation="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_blue"
        android:text="@string/confirm"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

