<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f9fa"
        tools:context=".auth.presentation.login.LoginFragment">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_50sdp"
            android:indeterminateTint="@color/seed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_header_tv"
            style="@style/title_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="4dp"
            android:text="@string/hello_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backImageView" />

        <TextView
            android:id="@+id/welcome_msg_tv"
            style="@style/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:text="@string/welcome_back_msg"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_header_tv"
            app:layout_constraintVertical_bias="0.478" />


        <include
            android:id="@+id/email_field"
            layout="@layout/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@+id/password_field"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/welcome_msg_tv" />


        <include
            android:id="@+id/password_field"
            layout="@layout/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/forget_password_btn"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/email_field" />


        <Button
            android:id="@+id/forget_password_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_btn" />

        <include
            android:id="@+id/google_btn_view"
            layout="@layout/google_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_54sdp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintVertical_bias="0.275" />

        <TextView
            android:id="@+id/nav_to_register_tv"
            style="@style/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_account"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            app:layout_constraintBaseline_toBaselineOf="@+id/nav_to_register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nav_to_register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/bold"
            android:text="@string/sign_up"
            android:textColor="@color/md_theme_light_onSurface"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/nav_to_register_tv"
            app:layout_constraintTop_toBottomOf="@id/google_btn_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guestBtn"
            android:textColor="@color/md_theme_dark_primaryContainer"
            android:backgroundTint="@color/md_theme_dark_primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/guest"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"

            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/nav_to_register_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>